# warden

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  rust-toolchain.toml
.claude/commands/warden/: install.md
.githooks/: pre-push
.github/workflows/: ci.yml
assets/: build-icons.sh
crates/warden-app/: Cargo.toml  build.rs  tauri.conf.json
crates/warden-app/capabilities/: default.json
crates/warden-app/icons/: icon.icns
crates/warden-app/src/: geometry.rs  main.rs  manager.rs  notify.rs  plan.rs  probe.rs  registry.rs  scanner.rs
crates/warden-app/src/ffi/: mod.rs
crates/warden-app/src/surface/: ghostty.rs  mod.rs
crates/warden-app/ui/: diagnostic.html  index.html
crates/warden-config/: Cargo.toml
crates/warden-config/src/: colour.rs  fmt.rs  lib.rs  load.rs  model.rs  raw.rs  reconcile.rs  resolve.rs  watch.rs
crates/warden-config/tests/: cli.rs
docs/: FOLLOWUPS.md  notifications.md
examples/: config.toml
examples/projects/: README.md
scripts/: install-app.sh  release.sh
