[package]
name = "warden-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for programmatic transparent windows (the
# WebviewWindowBuilder::transparent method is gated behind it on macOS). Windows
# are created at runtime here, so config-side transparency no longer applies.
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warden-config = { path = "../warden-config" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSWindow", "NSResponder", "NSEvent", "NSGraphics", "NSPasteboard", "NSApplication", "NSMenu"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSString", "NSThread"] }
