[package]
name = "warden-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for programmatic transparent windows (the
# WebviewWindowBuilder::transparent method is gated behind it on macOS). Windows
# are created at runtime here, so config-side transparency no longer applies.
tauri = { version = "2", features = ["macos-private-api"] }
# Persist each window's size + position across launches, keyed by Tauri label.
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warden-config = { path = "../warden-config" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSWindow", "NSResponder", "NSEvent", "NSGraphics", "NSPasteboard", "NSApplication", "NSMenu", "NSImageRep", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSString", "NSThread", "NSData", "NSDictionary", "NSNotification"] }
# Native macOS banners for terminal OSC 9/777 (see src/notify.rs). Replaces the
# tauri-plugin-notification backend, whose notify-rust/NSUserNotification path is
# a silent no-op on macOS 26. block2 is for the authorization completion handler.
block2 = "0.5"
objc2-user-notifications = { version = "0.2", features = ["UNUserNotificationCenter", "UNNotification", "UNNotificationContent", "UNNotificationRequest", "UNNotificationResponse", "UNNotificationTrigger", "block2"] }
