[package]
name = "warden-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
notify = "6"
dirs = "5"
# Shared house-style TOML formatter + colour parsing (formerly warden's own fmt.rs/colour.rs),
# now lifted into config-core and shared with curator. Git dep so the build needs no extra setup.
config-core = { git = "https://github.com/Lockyc/config-core" }
# Used by load.rs / watch.rs tests for temp config dirs.
tempfile = "3"

[[bin]]
name = "warden"
path = "src/bin/warden.rs"
